# penguin

./: Cargo.toml  Makefile  README.md  triage.json
penguin_cmd/: Cargo.toml
penguin_cmd/src/: cmd.rs  main.rs
penguin_hackmd/: Cargo.toml
penguin_hackmd/src/: lib.rs  model.rs
penguin_scrap/: Cargo.toml
penguin_scrap/src/: lib.rs  model.rs
penguin_scrap/src/github/: mod.rs  model.rs  printer.rs
