[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

[dependencies]
rio_rt = { git = "https://github.com/vincenzopalazzo/rio.git" }
log = "0.4"
env_logger = "0.9.1"
surf = { version = "2.3.2", features = [ "curl-client" ] }
penguin_hackmd = { path = "../penguin_hackmd" }
penguin_scrap = { path = "../penguin_scrap" }
clap = { version = "4.0.26", features = ["derive"] }
# Used for the `fs`
async-std = "1.12.0"
serde_json = "1.0.88"
chrono = "0.4.23"
radicle-term = { git = "https://github.com/radicle-dev/heartwood.git" }
